# cockpit-design-aesthetics

./: README.md  create_structure.sh  pyproject.toml  verify_structure.sh
src/cockpit_design_aesthetics/: __init__.py  __main__.py  handler.py  server.py
src/cockpit_design_aesthetics/ologs/: instruments.yaml
tests/: run_tests.sh  test_server.py
